--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   redis:
-    host: localhost
+    host: 127.0.0.1
     port: 6379
-    password: mhc123456
+    password:
     lettuce:
       pool:
         max-active: 10
